syntax = "proto3";

package service;

option java_multiple_files = true;
option java_package = "com.fengzw.minimall.minimalluser.service";
option java_outer_classname = "UserProto";

// The greeting service definition.
service UserService {
  // Sends a greeting
  rpc GetUser (GetUserRequest) returns (GetUserReply) {}
}

// The request message containing the user's name.
message GetUserRequest {
  int64 id = 1;
}

// The response message containing the greetings
message GetUserReply {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string nickname = 4;
}